# redis-om-python

./: .codespellrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  build.py  dataloader.py  demo.py  docker-compose.yml  food_truck.py  make_sync.py  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  test.py  tox.ini
.github/: dependabot.yml  spellcheck-settings.yml  wordlist.txt
.github/workflows/: check-pypi.yml  ci.yml  codeql.yml  docs-pages.yml  pypi-publish.yaml  release-drafter.yml  spellcheck.yml
aredis_om/: __init__.py  _compat.py  async_redis.py  checks.py  connections.py  redisvl.py  settings.py  sync_redis.py  unasync_util.py  util.py
aredis_om/cli/: __init__.py  main.py
aredis_om/model/: __init__.py  encoders.py  model.py  query_resolver.py  render_tree.py  token_escaper.py  types.py
aredis_om/model/cli/: index.py  legacy_migrate.py  migrate.py  migrate_data.py
aredis_om/model/migrations/: __init__.py  data_migrator.py  datetime_migration.py  migrator.py  schema_migrator.py
aredis_om/model/migrations/data/: __init__.py  base.py  migrator.py
aredis_om/model/migrations/data/builtin/: __init__.py  datetime_migration.py
aredis_om/model/migrations/schema/: __init__.py  base.py  legacy_migrator.py  migrator.py
aredis_om/model/migrations/utils/: __init__.py
dev/bench/: data.js  data.json
docs/: MIGRATION_GUIDE.md  MIGRATION_PERFORMANCE_TUNING.md  MIGRATION_TROUBLESHOOTING.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  connections.md  datetime_schema_detection.md  embedded_models.md  errors.md  faq.md  fastapi_integration.md  getting_started.md  index.md  integrating.md  migration_guide_0x_to_1x.md  migrations.md  models.md  models_and_fields.md  querying.md  redis_modules.md  redis_setup.md  release_notes_1.0.md  release_notes_1.1.md  testing.md  validation.md
docs/stylesheets/: extra.css
examples/: README.md  fastapi_app.py  flask_app.py
migrations/data-migrations/: 20250825_112740_dm1.py
redis_developer/: connections.py
redis_developer/model/: __init__.py  model.py  models.py  query_resolver.py  token_escaper.py
redis_developer/model/cli/: migrate.py
redis_developer/model/migrations/: migrator.py
redis_developer/orm/: __init__.py  connections.py  encoders.py  model.py  models.py  query_iterator.py  query_resolver.py  render_tree.py  token_escaper.py  util.py
redis_developer/orm/cli/: migrate.py
redis_developer/orm/migrations/: migrator.py
redis_developer/tests/: test_model.py
redis_om/: README.md  __init__.py  checks.py  connections.py  unasync_util.py
redis_om/model/: encoders.py  model.py  models.py  query_resolver.py  render_tree.py
redis_om/model/cli/: migrate.py
redis_om/model/migrations/: migrator.py
tests/: _compat.py  conftest.py  test_benchmarks.py  test_bug_fixes.py  test_cli_migrate.py  test_cli_migrate_data.py  test_data_migrations.py  test_datetime_date_fix.py  test_datetime_fix.py  test_enhanced_datetime_migration.py  test_examples.py  test_find_count.py  test_find_query.py  test_hash_field_expiration.py  test_hash_model.py  test_json_model.py  test_knn_expression.py  test_migration_cli_enhanced.py  test_model.py  test_oss_redis_features.py  test_pydantic_integrations.py  test_redis_type.py  test_redisvl_integration.py  test_schema_migrator.py  test_tag_separator.py  test_time.py
