[tool.poetry]
name = "redis-om"
version = "0.0.19"
description = "Objecting mapping, and more, for Redis."
authors = ["Andrew Brookins <andrew.brookins@redis.com>"]
maintainers = ["Andrew Brookins <andrew.brookins@redis.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/redis-developer/redis-om-python"
packages = [
    { "include" = "aredis_om" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database :: Front-Ends",
]
include=[
    "docs/*",
    "images/*",
    "redis_om/**/*",
]

[tool.poetry.dependencies]
python = "^3.7"
redis = ">=3.5.3,<5.0.0"
aioredis = "^2.0.0"
pydantic = "^1.8.2"
click = "^8.0.1"
six = "^1.16.0"
pptree = "^3.1"
types-redis = ">=3.5.9,<5.0.0"
types-six = "^1.16.1"
python-ulid = "^1.0.3"
python-dotenv = "^0.19.1"
cleo = "1.0.0a4"
typing-extensions = "^4.0.0"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^7.0.1"
ipdb = "^0.13.9"
pylint = "^2.12.2"
black = "^22.1"
isort = "^5.9.3"
flake8 = "^4.0.1"
bandit = "^1.7.2"
coverage = "^6.3"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
unasync = "^0.5.0"
pytest-asyncio = "^0.18.1"
twine = "^3.8.0"
email-validator = "^1.1.3"
tox = "^3.24.5"
tox-pyenv = "^1.1.0"

[tool.poetry.scripts]
migrate = "redis_om.model.cli.migrate:migrate"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
