[tool.poetry]
name = "redis-om"
version = "0.3.2"
description = "Object mappings, and more, for Redis."
authors = ["Redis OSS <oss@redis.com>"]
maintainers = ["Redis OSS <oss@redis.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/redis/redis-om-python"
packages = [
    { "include" = "aredis_om" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Database",
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python',
]
include=[
    "docs/*",
    "images/*",
    "redis_om/**/*",
]

[tool.poetry.urls]
"Code" = "https://github.com/redis/redis-om-python"
"Issue tracker" = "https://github.com/redis/redis-om-python/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
redis = ">=3.5.3,<6.0.0"
pydantic = ">=1.10.2,<3.0.0"
click = "^8.0.1"
types-redis = ">=3.5.9,<5.0.0"
python-ulid = "^1.0.3"
typing-extensions = "^4.4.0"
hiredis = ">=2.2.3,<4.0.0"
more-itertools = ">=8.14,<11.0"
setuptools = {version = ">=70.0,<73.0", markers = "python_version >= '3.12'"}

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
pytest = "^8.0.2"
ipdb = "^0.13.9"
black = "^24.2"
isort = "^5.9.3"
flake8 = "^5.0.4"
bandit = "^1.7.4"
coverage = "^7.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.1.0"
unasync = "^0.6.0"
pytest-asyncio = "^0.24.0"
email-validator = "^2.0.0"
tox = "^4.14.1"
tox-pyenv = "^1.1.0"

[tool.poetry.scripts]
migrate = "redis_om.model.cli.migrate:migrate"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



