[project]
name = "redis-om"
version = "1.0.4-beta"
description = "Object mappings, and more, for Redis."
authors = [{ name = "Redis OSS", email = "oss@redis.com" }]
maintainers = [{ name = "Redis OSS", email = "oss@redis.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
]
dependencies = [
    "redis>=4.2.0,<8.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.0.1",
    "types-redis>=3.5.9,<5.0.0",
    "python-ulid>=1.0.3,<=3.1.0",
    "typing-extensions>=4.4.0",
    "hiredis>=2.2.3,<4.0.0",
    "more-itertools>=8.14,<11.0",
    "setuptools>=70.0",
    "pydantic-extra-types>=2.10.5",
    "redisvl>=0.13.0",
]

[project.urls]
Repository = "https://github.com/redis/redis-om-python"
Code = "https://github.com/redis/redis-om-python"
"Issue tracker" = "https://github.com/redis/redis-om-python/issues"

[project.scripts]
om = "aredis_om.cli.main:om"

[project.optional-dependencies]
examples = [
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.9.0; platform_python_implementation == 'CPython'",
    "pytest>=8.0.2,<10.0.0",
    "ipdb>=0.13.9",
    "black>=24.2,<27.0",
    "isort>=5.9.3,<8.0.0",
    "flake8>=5.0.4,<8.0.0",
    "bandit>=1.7.4",
    "coverage>=7.1",
    "pytest-cov>=5,<8",
    "pytest-xdist>=3.1.0",
    "unasync>=0.6.0",
    "pytest-asyncio>=0.24,<1.4",
    "email-validator>=2.0.0",
    "tox>=4.14.1",
    "tox-pyenv>=1.1.0",
    "codespell>=2.2.0",
    "pre-commit>=4.3.0; python_version >= '3.10'",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pytest-benchmark>=5.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aredis_om", "redis_om"]

[tool.hatch.build.targets.sdist]
include = [
    "aredis_om/**/*",
    "redis_om/**/*",
]



